# phd

./: .gitignore  pyproject.toml  requirements.txt
calculation_examples/risk-based-design-force/: calculation.xlsm  ec8_Sr_tailfingen.xlsx  eshm20_hazard_curve_tailfingen.xlsm
casestudy_structures/: casestudy__S_alpha_values_for_design.xlsx  casestudy_floor__dead_load_takedown.xlsx
data_processed/01_site_selection/: high_region0_site_candidates_pm_region_median.html  high_region1_site_candidates_pm_region_median.html  high_region2_site_candidates_pm_region_median.html  high_region3_site_candidates_pm_region_median.html  high_region5_site_candidates_pm_region_median.html  lowmod_region3_site_candidates_pm_region_median.html
data_raw/: test_cg26.pkl  test_data_ctxs.pkl
data_raw/NEAMTH18_tecto_zones/: Regions_INFO.txt  Regions_Tectonics_GEO_HDF5.txt  Regions_Tectonics_Settings_HDF5.txt
data_raw/brace_buckling_tests/: Black_1980.xlsx  (+12 more)
excel/: cbf_design_dc1.xltx  cbf_design_dc2.xltx  cbf_design_dc3.xltx  ec8_design_spectral_acceleration.xlsx  flushendplate_bc_connection_3rows.xlsx  gmselection__n_records_for_sigma_precision.xlsx  montecarlo__parameters_and_variables.xlsx  seismic_gusset.xltx
meeting_presentations/: 20250709_update_meeting.pptx  20251002_update_meeting.pptx  20251017_update_meeting.pptx  20251103_update_meeting.pptx  20251117_update_meeting.pptx  20251128_update_meeting.pptx  20251211_update_meeting_benno.pptx
phd_project/: plotting.py
shk_aufgaben/: 20250211_gefaehrdungskurve_fuer_Deutschland.docx  20250227_Erdbebenkarte_fuer_Deutschland.docx
(+2946 files in other folders)
